--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,8 +8,10 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "CV"
-    url: /files/resume.pdf
+- title: "CV"
+ url: /cv-json/
+  #- title: "CV"
+   # url: /files/resume.pdf
     
   - title: "Publications"
     url: /publications/
@@ -24,6 +26,5 @@ main:
     
 
     
-  # - title: "CV"
-  #   url: /cv-json/
+
     
